namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-release-in-error-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "data-platform-app-release-in-error-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "prison-data-science-support"
    cloud-platform.justice.gov.uk/application: "Data Platform App Release in Error"
    cloud-platform.justice.gov.uk/owner: "Prison Data Science: prison-data-science@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/data-platform-app-release-in-error"
    cloud-platform.justice.gov.uk/team-name: "prison-data-science"
    cloud-platform.justice.gov.uk/review-after: ""
